# convo

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  run_coverage.py  run_deploy.py  run_init_db.py  run_tests.py
apps/api/: .coveragerc  .env.example  Dockerfile  README.md  pyproject.toml  pytest.ini  run_coverage.py  run_deploy.py  run_formatter.py  run_linter.py  run_migrate.py  run_seed_db.py  run_tests.py
apps/api/scripts/: init_test_db.sh  setup_test_db.py
apps/api/tests/: conftest.py  rest-api.http
apps/ui/: Dockerfile  README.md  build-and-deploy.sh  eslint.config.js  index.html  nginx.conf  package.json  vite.config.ts
apps/ui/k8s/: deployment.yaml  service.yaml
apps/ui/src/: ARCHITECTURE.md  AUTHENTICATION.md  App.tsx  README.md  index.css
scripts/: deploy.sh  setup.sh
src/application/: exceptions.py
src/application/dtos/: __init__.py
src/application/filters/: __init__.py
src/application/interfaces/: use_case_interface.py  user_repository_interface.py
src/application/use_cases/: company_use_cases.py  contact_use_cases.py  message_use_cases.py  user_use_cases.py
src/deploy/docker/: Dockerfile
src/deploy/k8s/: service.yaml
src/domain/: enums.py  errors.py
src/domain/entities/: base.py  chat.py  company.py  contact.py  message.py  user.py
src/domain/repositories/: chat_repository.py  company_repository.py  contact_repository.py  message_repository.py  user_repository.py
src/helpers/: helpes.py
src/infrastructure/: enums.py  repository_factory.py  settings.py
tests/: conftest.py  rest-api.http
tests/factories/: domain_factories.py
tests/fixtures/: database_fixtures.py  domain_fixtures.py  repository_fixtures.py  web_fixtures.py
tests/infrastructure/: test_in_memory_company_repository.py  test_in_memory_contact_repository.py  test_in_memory_message_repository.py  test_in_memory_user_repository.py
(+324 files in other folders)
