[project]
name = "convo"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "coverage>=7.11.0",
    "fastapi[standard]>=0.128.0",
    "flask>=3.1.2",
    "gunicorn>=23.0.0",
    "pytest>=8.4.2",
    "ruff>=0.14.2",
    "uvicorn>=0.40.0",
]

[tool.ruff]
line-length = 88
target-version = "py313"
exclude = [".venv"]

# Ativa linter + formatação (substitui black/isort)
[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "W"]
ignore = ["E501", "F403"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
